# smart-stream-learning

./: .gitmodules  README.md
AI/: MCP.docx  ~$MCP.docx
AI/MCP_learning/: pyproject.toml
AI/MCP_learning/mcpAndLocalFile/: crypto.py  local.py  log.txt  main.py  notes.txt  pedenticInput.py  pyproject.toml  screenshot.py  websearch.py
Git/: Codu push command.docx  Git_Notes.docx  index.html  ~$du push command.docx
JavaScript/: JAVASCRIPT.docx  Practice.js  ~$VASCRIPT.docx
JavaScript/01-Fundamentals-Part-1/: EqualityOperator.js  If-else.js  TemplateLiterals.js  TypeCoercion.js  TypeConversion.js  challenge_01.js  script.js
JavaScript/02-Fundamentals-Part-2/: Array.js  Challenge.js  Function.js  Object.js  StrictMode.js
JavaScript/05-Guess-My-Number/: README.md  script.js  style.css
JavaScript/06-Modal/: script.js
JavaScript/11-Arrays-Bankist/: ArrayMethods.js  Challenge.js  ForEach.js
JavaScript/Asynchronous-JavaScript/: BuildPromise.js  EventLoop.js  Promise.js  async-await.js  index.html  package-lock.json  package.json  xmlHTTPRequest.js
JavaScript/Challeges/: TextAnalyzer.js  TheMovieList.js  VendingMachine.js  index.html
JavaScript/Closer-Look-at-function/: AcceptingCallbackFunction.js  Challenge.js  Closure.js  Default-Parameter.js  Primitive-Vs-Reference.js  thisManipulation.js
JavaScript/Data-Structure-in-JavaScript/: Array.js  Challenge.js  (+9 more)
Locators/: Locators.docx  locators.txt
Playwright/: .gitignore  Playwright.docx  ~$aywright.docx  ~WRL3598.tmp
TypeScript/: .gitignore  TypeScript.docx  ~$peScript.docx  ~WRL0675.tmp  ~WRL1069.tmp
(+180 files in other folders)
