[project]
name = "mcpandlocalfile"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.27.1",
    "openai>=2.38.0",
    "pillow>=12.2.0",
    "pyautogui>=0.9.54",
    "pyscreeze>=1.0.1",
    "requests>=2.34.2",
]
